force-app/main/default/objects/Account/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <label>Location Number</label>
    <type>AutoNumber</type>
</CustomField>