force-app/main/default/objects/Account/recordTypes/New_Location.recordType-meta.xml
<RecordType>
    <fullName>New_Location</fullName>
    <active>true</active>
    <description>Record type for uploading new location</description>
    <label>New Location</label>
</RecordType>