force-app/main/default/objects/Account/recordTypes/Order_Online.recordType-meta.xml
<RecordType>
    <fullName>Order_Online</fullName>
    <active>true</active>
    <label>Order Online</label>
</RecordType>