force-app/main/default/objects/Account/listViews/KK_Locations.listView-meta.xml
<ListView>
    <fullName>KK_Locations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Kustom Kreations</value>
    </filters>
    <label>KK Locations</label>
</ListView>